fixed alignment problems

--- a/styles.css/body.css
+++ b/styles.css/body.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  width: fit-content;
+  background: #FFF;
 }
 
 p {
